Change MTA: San Andreas To IRMP: San Andreas

--- a/Shared/data/MTA San Andreas/MTA/locale/ar_SA/client.pot
+++ b/Shared/data/MTA San Andreas/MTA/locale/ar_SA/client.pot
@@ -77,7 +77,7 @@ msgid "Help"
 msgstr "مساعدة"
 
 #: Client/loader/Dialogs.cpp:55
-msgid "MTA: San Andreas has encountered a problem"
+msgid "IRMP: San Andreas has encountered a problem"
 msgstr "IRMP:SA واجهت مشكلة ما"
 
 #: Client/loader/Dialogs.cpp:56
@@ -93,12 +93,12 @@ msgid "Doing so will increase the chance of this crash being fixed."
 msgstr "هذا الفعل سيزيد من فرصة تصليح فشل التشغيل"
 
 #: Client/loader/Dialogs.cpp:59
-msgid "Do you want to restart MTA: San Andreas ?"
-msgstr "هل تريد إعادة تشغيل MTA: San Andreas؟"
+msgid "Do you want to restart IRMP: San Andreas ?"
+msgstr "هل تريد إعادة تشغيل IRMP: San Andreas؟"
 
 #: Client/loader/Dialogs.cpp:66
-msgid "MTA: San Andreas - Warning"
-msgstr "MTA: San Andreas - تحذير"
+msgid "IRMP: San Andreas - Warning"
+msgstr "IRMP: San Andreas - تحذير"
 
 #: Client/loader/Dialogs.cpp:67
 msgid "Your Grand Theft Auto: San Andreas install directory contains these files:"
@@ -131,8 +131,8 @@ msgid "Play IRMP:SA"
 msgstr "ألعب IRMP:SA"
 
 #: Client/loader/Dialogs.cpp:81
-msgid "MTA: San Andreas - Confusing options"
-msgstr "MTA: San Andreas - خيارات مربكة"
+msgid "IRMP: San Andreas - Confusing options"
+msgstr "IRMP: San Andreas - خيارات مربكة"
 
 #: Client/loader/Dialogs.cpp:82
 msgid "NVidia Optimus detected!"
@@ -175,7 +175,7 @@ msgid "Don't show again"
 msgstr "لا تظهر ذلك مرة أخرى"
 
 #: Client/loader/Dialogs.cpp:98 Client/game_sa/CSettingsSA.cpp:859
-msgid "MTA: San Andreas"
+msgid "IRMP: San Andreas"
 msgstr "ملتي تيڤت اوتو: سان أندرياس"
 
 #: Client/loader/Dialogs.cpp:99
