--- a/Shared/data/MTA San Andreas/MTA/locale/fa_IR/client.pot
+++ b/Shared/data/MTA San Andreas/MTA/locale/fa_IR/client.pot
@@ -77,8 +77,8 @@ msgid "Help"
 msgstr "کمک"
 
 #: Client/loader/Dialogs.cpp:55
-msgid "MTA: San Andreas has encountered a problem"
-msgstr "MTA: San Andreas به مشکل برخورده است."
+msgid "IRMP: San Andreas has encountered a problem"
+msgstr "IRMP: San Andreas به مشکل برخورده است."
 
 #: Client/loader/Dialogs.cpp:56
 msgid "Crash information"
@@ -93,11 +93,11 @@ msgid "Doing so will increase the chance of this crash being fixed."
 msgstr "انجام اینکار احتمال کرش شدن را زیاد می کند."
 
 #: Client/loader/Dialogs.cpp:59
-msgid "Do you want to restart MTA: San Andreas ?"
-msgstr "آیا می خواهید MTA: San Andreas را راه‌اندازی مجدد کنید؟"
+msgid "Do you want to restart IRMP: San Andreas ?"
+msgstr "آیا می خواهید IRMP: San Andreas را راه‌اندازی مجدد کنید؟"
 
 #: Client/loader/Dialogs.cpp:66
-msgid "MTA: San Andreas - Warning"
+msgid "IRMP: San Andreas - Warning"
 msgstr "ام تی ای: سن آندریاس - اخطار"
 
 #: Client/loader/Dialogs.cpp:67
@@ -131,8 +131,8 @@ msgid "Play IRMP:SA"
 msgstr "اجرای IRMP:SA"
 
 #: Client/loader/Dialogs.cpp:81
-msgid "MTA: San Andreas - Confusing options"
-msgstr "MTA: San Andreas - تنظیمات گیج کننده"
+msgid "IRMP: San Andreas - Confusing options"
+msgstr "IRMP: San Andreas - تنظیمات گیج کننده"
 
 #: Client/loader/Dialogs.cpp:82
 msgid "NVidia Optimus detected!"
@@ -175,8 +175,8 @@ msgid "Don't show again"
 msgstr "دیگر نمایش نده"
 
 #: Client/loader/Dialogs.cpp:98 Client/game_sa/CSettingsSA.cpp:859
-msgid "MTA: San Andreas"
-msgstr "MTA: San Andreas"
+msgid "IRMP: San Andreas"
+msgstr "IRMP: San Andreas"
 
 #: Client/loader/Dialogs.cpp:99
 msgid "Warning: Could not detect anti-virus product"
