--- a/Shared/data/MTA San Andreas/MTA/locale/az_AZ/client.pot
+++ b/Shared/data/MTA San Andreas/MTA/locale/az_AZ/client.pot
@@ -77,8 +77,8 @@ msgid "Help"
 msgstr "Kömək"
 
 #: Client/loader/Dialogs.cpp:55
-msgid "MTA: San Andreas has encountered a problem"
-msgstr "MTA: San Andreas problemlə qarşılaşdı"
+msgid "IRMP: San Andreas has encountered a problem"
+msgstr "IRMP: San Andreas problemlə qarşılaşdı"
 
 #: Client/loader/Dialogs.cpp:56
 msgid "Crash information"
@@ -93,12 +93,12 @@ msgid "Doing so will increase the chance of this crash being fixed."
 msgstr "Bu addımla çökmə səbəbinin düzəliş şansını artıra bilərsiniz."
 
 #: Client/loader/Dialogs.cpp:59
-msgid "Do you want to restart MTA: San Andreas ?"
-msgstr "MTA: San Andreas tətbiqini yenidən başlatmaq istəyirsiniz?"
+msgid "Do you want to restart IRMP: San Andreas ?"
+msgstr "IRMP: San Andreas tətbiqini yenidən başlatmaq istəyirsiniz?"
 
 #: Client/loader/Dialogs.cpp:66
-msgid "MTA: San Andreas - Warning"
-msgstr "MTA: San Andreas - Xəbərdarlıq"
+msgid "IRMP: San Andreas - Warning"
+msgstr "IRMP: San Andreas - Xəbərdarlıq"
 
 #: Client/loader/Dialogs.cpp:67
 msgid "Your Grand Theft Auto: San Andreas install directory contains these files:"
@@ -131,8 +131,8 @@ msgid "Play IRMP:SA"
 msgstr "IRMP:SA Oyna"
 
 #: Client/loader/Dialogs.cpp:81
-msgid "MTA: San Andreas - Confusing options"
-msgstr "MTA: San Andreas - Çaşqın seçimlər"
+msgid "IRMP: San Andreas - Confusing options"
+msgstr "IRMP: San Andreas - Çaşqın seçimlər"
 
 #: Client/loader/Dialogs.cpp:82
 msgid "NVidia Optimus detected!"
@@ -175,8 +175,8 @@ msgid "Don't show again"
 msgstr "Yenidən göstərmə"
 
 #: Client/loader/Dialogs.cpp:98 Client/game_sa/CSettingsSA.cpp:859
-msgid "MTA: San Andreas"
-msgstr "MTA: San Andreas"
+msgid "IRMP: San Andreas"
+msgstr "IRMP: San Andreas"
 
 #: Client/loader/Dialogs.cpp:99
 msgid "Warning: Could not detect anti-virus product"
