--- a/Shared/data/MTA San Andreas/MTA/locale/el_GR/client.pot
+++ b/Shared/data/MTA San Andreas/MTA/locale/el_GR/client.pot
@@ -77,8 +77,8 @@ msgid "Help"
 msgstr "Βοήθεια"
 
 #: Client/loader/Dialogs.cpp:55
-msgid "MTA: San Andreas has encountered a problem"
-msgstr "Το MTA: San Andreas συνάντησε ένα πρόβλημα"
+msgid "IRMP: San Andreas has encountered a problem"
+msgstr "Το IRMP: San Andreas συνάντησε ένα πρόβλημα"
 
 #: Client/loader/Dialogs.cpp:56
 msgid "Crash information"
@@ -93,12 +93,12 @@ msgid "Doing so will increase the chance of this crash being fixed."
 msgstr "Κάνοντας το θα αυξήσει τις πιθανότητες για αυτό το crash να φτιαχτεί."
 
 #: Client/loader/Dialogs.cpp:59
-msgid "Do you want to restart MTA: San Andreas ?"
-msgstr "Θέλετε να επανεκκινήσετε το MTA: San Andreas ;"
+msgid "Do you want to restart IRMP: San Andreas ?"
+msgstr "Θέλετε να επανεκκινήσετε το IRMP: San Andreas ;"
 
 #: Client/loader/Dialogs.cpp:66
-msgid "MTA: San Andreas - Warning"
-msgstr "MTA: San Andreas - Προειδοποιήση"
+msgid "IRMP: San Andreas - Warning"
+msgstr "IRMP: San Andreas - Προειδοποιήση"
 
 #: Client/loader/Dialogs.cpp:67
 msgid "Your Grand Theft Auto: San Andreas install directory contains these files:"
@@ -130,8 +130,8 @@ msgid "Play IRMP:SA"
 msgstr "Παίξτε IRMP:SA"
 
 #: Client/loader/Dialogs.cpp:81
-msgid "MTA: San Andreas - Confusing options"
-msgstr "MTA: San Andreas - Περίπλοκες ρυθμίσεις"
+msgid "IRMP: San Andreas - Confusing options"
+msgstr "IRMP: San Andreas - Περίπλοκες ρυθμίσεις"
 
 #: Client/loader/Dialogs.cpp:82
 msgid "NVidia Optimus detected!"
@@ -174,8 +174,8 @@ msgid "Don't show again"
 msgstr "Να μην εμφανιστεί ξανά"
 
 #: Client/loader/Dialogs.cpp:98 Client/game_sa/CSettingsSA.cpp:859
-msgid "MTA: San Andreas"
-msgstr "MTA: San Andreas"
+msgid "IRMP: San Andreas"
+msgstr "IRMP: San Andreas"
 
 #: Client/loader/Dialogs.cpp:99
 msgid "Warning: Could not detect anti-virus product"
