--- a/Shared/data/MTA San Andreas/MTA/locale/ko_KR/client.pot
+++ b/Shared/data/MTA San Andreas/MTA/locale/ko_KR/client.pot
@@ -77,8 +77,8 @@ msgid "Help"
 msgstr "도움말"
 
 #: Client/loader/Dialogs.cpp:55
-msgid "MTA: San Andreas has encountered a problem"
-msgstr "MTA: San Andreas에 문제가 발생하였습니다."
+msgid "IRMP: San Andreas has encountered a problem"
+msgstr "IRMP: San Andreas에 문제가 발생하였습니다."
 
 #: Client/loader/Dialogs.cpp:56
 msgid "Crash information"
@@ -93,12 +93,12 @@ msgid "Doing so will increase the chance of this crash being fixed."
 msgstr "충돌이 해결될 가능성이 높아집니다."
 
 #: Client/loader/Dialogs.cpp:59
-msgid "Do you want to restart MTA: San Andreas ?"
-msgstr "MTA: San Andreas를 다시 시작하시겠습니까?"
+msgid "Do you want to restart IRMP: San Andreas ?"
+msgstr "IRMP: San Andreas를 다시 시작하시겠습니까?"
 
 #: Client/loader/Dialogs.cpp:66
-msgid "MTA: San Andreas - Warning"
-msgstr "MTA: San Andreas - 주의"
+msgid "IRMP: San Andreas - Warning"
+msgstr "IRMP: San Andreas - 주의"
 
 #: Client/loader/Dialogs.cpp:67
 msgid "Your Grand Theft Auto: San Andreas install directory contains these files:"
@@ -131,8 +131,8 @@ msgid "Play IRMP:SA"
 msgstr "IRMP:SA 시작"
 
 #: Client/loader/Dialogs.cpp:81
-msgid "MTA: San Andreas - Confusing options"
-msgstr "MTA: San Andreas - 혼동되는 설정"
+msgid "IRMP: San Andreas - Confusing options"
+msgstr "IRMP: San Andreas - 혼동되는 설정"
 
 #: Client/loader/Dialogs.cpp:82
 msgid "NVidia Optimus detected!"
@@ -175,8 +175,8 @@ msgid "Don't show again"
 msgstr "다시 표시하지 않음"
 
 #: Client/loader/Dialogs.cpp:98 Client/game_sa/CSettingsSA.cpp:859
-msgid "MTA: San Andreas"
-msgstr "MTA: San Andreas"
+msgid "IRMP: San Andreas"
+msgstr "IRMP: San Andreas"
 
 #: Client/loader/Dialogs.cpp:99
 msgid "Warning: Could not detect anti-virus product"
