--- a/Shared/data/MTA San Andreas/MTA/locale/nb_NO/client.pot
+++ b/Shared/data/MTA San Andreas/MTA/locale/nb_NO/client.pot
@@ -77,8 +77,8 @@ msgid "Help"
 msgstr "Hjelp"
 
 #: Client/loader/Dialogs.cpp:55
-msgid "MTA: San Andreas has encountered a problem"
-msgstr "MTA: San Andreas har støtt på ett problem"
+msgid "IRMP: San Andreas has encountered a problem"
+msgstr "IRMP: San Andreas har støtt på ett problem"
 
 #: Client/loader/Dialogs.cpp:56
 msgid "Crash information"
@@ -93,12 +93,12 @@ msgid "Doing so will increase the chance of this crash being fixed."
 msgstr "Ved å gjøre det øker det sjansen for at denne feilen blir rettet."
 
 #: Client/loader/Dialogs.cpp:59
-msgid "Do you want to restart MTA: San Andreas ?"
+msgid "Do you want to restart IRMP: San Andreas ?"
 msgstr "Ønsker du å starte MTA: San Andres på nytt ?"
 
 #: Client/loader/Dialogs.cpp:66
-msgid "MTA: San Andreas - Warning"
-msgstr "MTA: San Andreas - Advarsel"
+msgid "IRMP: San Andreas - Warning"
+msgstr "IRMP: San Andreas - Advarsel"
 
 #: Client/loader/Dialogs.cpp:67
 msgid "Your Grand Theft Auto: San Andreas install directory contains these files:"
@@ -130,8 +130,8 @@ msgid "Play IRMP:SA"
 msgstr "Spill IRMP:SA"
 
 #: Client/loader/Dialogs.cpp:81
-msgid "MTA: San Andreas - Confusing options"
-msgstr "MTA: San Andreas - Forvirrende innstillinger"
+msgid "IRMP: San Andreas - Confusing options"
+msgstr "IRMP: San Andreas - Forvirrende innstillinger"
 
 #: Client/loader/Dialogs.cpp:82
 msgid "NVidia Optimus detected!"
@@ -174,7 +174,7 @@ msgid "Don't show again"
 msgstr ""
 
 #: Client/loader/Dialogs.cpp:98 Client/game_sa/CSettingsSA.cpp:859
-msgid "MTA: San Andreas"
+msgid "IRMP: San Andreas"
 msgstr ""
 
 #: Client/loader/Dialogs.cpp:99
