--- a/Shared/data/MTA San Andreas/MTA/locale/pl_PL/client.pot
+++ b/Shared/data/MTA San Andreas/MTA/locale/pl_PL/client.pot
@@ -77,8 +77,8 @@ msgid "Help"
 msgstr "Pomoc"
 
 #: Client/loader/Dialogs.cpp:55
-msgid "MTA: San Andreas has encountered a problem"
-msgstr "MTA: San Andreas napotkało problem"
+msgid "IRMP: San Andreas has encountered a problem"
+msgstr "IRMP: San Andreas napotkało problem"
 
 #: Client/loader/Dialogs.cpp:56
 msgid "Crash information"
@@ -93,12 +93,12 @@ msgid "Doing so will increase the chance of this crash being fixed."
 msgstr "Wykonanie tej czynności zwiększy szanse na naprawienie tego błędu."
 
 #: Client/loader/Dialogs.cpp:59
-msgid "Do you want to restart MTA: San Andreas ?"
-msgstr "Czy chcesz uruchomić ponownie MTA: San Andreas?"
+msgid "Do you want to restart IRMP: San Andreas ?"
+msgstr "Czy chcesz uruchomić ponownie IRMP: San Andreas?"
 
 #: Client/loader/Dialogs.cpp:66
-msgid "MTA: San Andreas - Warning"
-msgstr "MTA: San Andreas - Ostrzeżenie"
+msgid "IRMP: San Andreas - Warning"
+msgstr "IRMP: San Andreas - Ostrzeżenie"
 
 #: Client/loader/Dialogs.cpp:67
 msgid "Your Grand Theft Auto: San Andreas install directory contains these files:"
@@ -131,8 +131,8 @@ msgid "Play IRMP:SA"
 msgstr "Uruchom IRMP:SA"
 
 #: Client/loader/Dialogs.cpp:81
-msgid "MTA: San Andreas - Confusing options"
-msgstr "MTA: San Andreas - Mylące opcje"
+msgid "IRMP: San Andreas - Confusing options"
+msgstr "IRMP: San Andreas - Mylące opcje"
 
 #: Client/loader/Dialogs.cpp:82
 msgid "NVidia Optimus detected!"
@@ -175,8 +175,8 @@ msgid "Don't show again"
 msgstr "Nie pokazuj więcej"
 
 #: Client/loader/Dialogs.cpp:98 Client/game_sa/CSettingsSA.cpp:859
-msgid "MTA: San Andreas"
-msgstr "MTA: San Andreas"
+msgid "IRMP: San Andreas"
+msgstr "IRMP: San Andreas"
 
 #: Client/loader/Dialogs.cpp:99
 msgid "Warning: Could not detect anti-virus product"
