--- a/Shared/data/MTA San Andreas/MTA/locale/srp/client.pot
+++ b/Shared/data/MTA San Andreas/MTA/locale/srp/client.pot
@@ -77,8 +77,8 @@ msgid "Help"
 msgstr "Pomoć"
 
 #: Client/loader/Dialogs.cpp:55
-msgid "MTA: San Andreas has encountered a problem"
-msgstr "MTA: San Andreas je naišao na problem"
+msgid "IRMP: San Andreas has encountered a problem"
+msgstr "IRMP: San Andreas je naišao na problem"
 
 #: Client/loader/Dialogs.cpp:56
 msgid "Crash information"
@@ -93,12 +93,12 @@ msgid "Doing so will increase the chance of this crash being fixed."
 msgstr "Radeći ovo povećava verovatnoću da će greška biti ispravljena."
 
 #: Client/loader/Dialogs.cpp:59
-msgid "Do you want to restart MTA: San Andreas ?"
-msgstr "Da li želite ponovo pokrenuti MTA: San Andreas ?"
+msgid "Do you want to restart IRMP: San Andreas ?"
+msgstr "Da li želite ponovo pokrenuti IRMP: San Andreas ?"
 
 #: Client/loader/Dialogs.cpp:66
-msgid "MTA: San Andreas - Warning"
-msgstr "MTA: San Andreas - Upozorenje"
+msgid "IRMP: San Andreas - Warning"
+msgstr "IRMP: San Andreas - Upozorenje"
 
 #: Client/loader/Dialogs.cpp:67
 msgid "Your Grand Theft Auto: San Andreas install directory contains these files:"
@@ -131,8 +131,8 @@ msgid "Play IRMP:SA"
 msgstr "Igraj IRMP:SA"
 
 #: Client/loader/Dialogs.cpp:81
-msgid "MTA: San Andreas - Confusing options"
-msgstr "MTA: San Andreas - Zbunjujuće postavke"
+msgid "IRMP: San Andreas - Confusing options"
+msgstr "IRMP: San Andreas - Zbunjujuće postavke"
 
 #: Client/loader/Dialogs.cpp:82
 msgid "NVidia Optimus detected!"
@@ -175,8 +175,8 @@ msgid "Don't show again"
 msgstr "Ne prikazuj ponovo"
 
 #: Client/loader/Dialogs.cpp:98 Client/game_sa/CSettingsSA.cpp:859
-msgid "MTA: San Andreas"
-msgstr "MTA: San Andreas"
+msgid "IRMP: San Andreas"
+msgstr "IRMP: San Andreas"
 
 #: Client/loader/Dialogs.cpp:99
 msgid "Warning: Could not detect anti-virus product"
