--- a/Shared/data/MTA San Andreas/MTA/locale/vi_VN/client.pot
+++ b/Shared/data/MTA San Andreas/MTA/locale/vi_VN/client.pot
@@ -77,8 +77,8 @@ msgid "Help"
 msgstr "Trợ giúp"
 
 #: Client/loader/Dialogs.cpp:55
-msgid "MTA: San Andreas has encountered a problem"
-msgstr "MTA: San Andreas đã gặp sự cố"
+msgid "IRMP: San Andreas has encountered a problem"
+msgstr "IRMP: San Andreas đã gặp sự cố"
 
 #: Client/loader/Dialogs.cpp:56
 msgid "Crash information"
@@ -93,12 +93,12 @@ msgid "Doing so will increase the chance of this crash being fixed."
 msgstr "Bằng việc làm vậy thì lỗi xung đột sẽ được sửa sớm nhất có thể."
 
 #: Client/loader/Dialogs.cpp:59
-msgid "Do you want to restart MTA: San Andreas ?"
-msgstr "Bạn có muốn khởi động lại MTA: San Andreas ?"
+msgid "Do you want to restart IRMP: San Andreas ?"
+msgstr "Bạn có muốn khởi động lại IRMP: San Andreas ?"
 
 #: Client/loader/Dialogs.cpp:66
-msgid "MTA: San Andreas - Warning"
-msgstr "MTA: San Andreas - Cảnh báo"
+msgid "IRMP: San Andreas - Warning"
+msgstr "IRMP: San Andreas - Cảnh báo"
 
 #: Client/loader/Dialogs.cpp:67
 msgid "Your Grand Theft Auto: San Andreas install directory contains these files:"
@@ -130,8 +130,8 @@ msgid "Play IRMP:SA"
 msgstr "Chơi IRMP:SA"
 
 #: Client/loader/Dialogs.cpp:81
-msgid "MTA: San Andreas - Confusing options"
-msgstr "MTA: San Andreas - Các tùy chọn dễ gây nhầm lẫn"
+msgid "IRMP: San Andreas - Confusing options"
+msgstr "IRMP: San Andreas - Các tùy chọn dễ gây nhầm lẫn"
 
 #: Client/loader/Dialogs.cpp:82
 msgid "NVidia Optimus detected!"
@@ -174,7 +174,7 @@ msgid "Don't show again"
 msgstr ""
 
 #: Client/loader/Dialogs.cpp:98 Client/game_sa/CSettingsSA.cpp:859
-msgid "MTA: San Andreas"
+msgid "IRMP: San Andreas"
 msgstr ""
 
 #: Client/loader/Dialogs.cpp:99
