--- a/Shared/data/MTA San Andreas/MTA/locale/zh_CN/client.pot
+++ b/Shared/data/MTA San Andreas/MTA/locale/zh_CN/client.pot
@@ -77,8 +77,8 @@ msgid "Help"
 msgstr "帮助"
 
 #: Client/loader/Dialogs.cpp:55
-msgid "MTA: San Andreas has encountered a problem"
-msgstr "MTA: San Andreas 遇到了问题"
+msgid "IRMP: San Andreas has encountered a problem"
+msgstr "IRMP: San Andreas 遇到了问题"
 
 #: Client/loader/Dialogs.cpp:56
 msgid "Crash information"
@@ -93,12 +93,12 @@ msgid "Doing so will increase the chance of this crash being fixed."
 msgstr "这样做可以增加修复此崩溃的机会。"
 
 #: Client/loader/Dialogs.cpp:59
-msgid "Do you want to restart MTA: San Andreas ?"
-msgstr "您想要重新启动MTA: San Andreas 吗?"
+msgid "Do you want to restart IRMP: San Andreas ?"
+msgstr "您想要重新启动IRMP: San Andreas 吗?"
 
 #: Client/loader/Dialogs.cpp:66
-msgid "MTA: San Andreas - Warning"
-msgstr "MTA: San Andreas - 警告"
+msgid "IRMP: San Andreas - Warning"
+msgstr "IRMP: San Andreas - 警告"
 
 #: Client/loader/Dialogs.cpp:67
 msgid "Your Grand Theft Auto: San Andreas install directory contains these files:"
@@ -131,8 +131,8 @@ msgid "Play IRMP:SA"
 msgstr "启动 IRMP:SA"
 
 #: Client/loader/Dialogs.cpp:81
-msgid "MTA: San Andreas - Confusing options"
-msgstr "MTA: San Andreas - 不明确的选项"
+msgid "IRMP: San Andreas - Confusing options"
+msgstr "IRMP: San Andreas - 不明确的选项"
 
 #: Client/loader/Dialogs.cpp:82
 msgid "NVidia Optimus detected!"
@@ -175,8 +175,8 @@ msgid "Don't show again"
 msgstr "不再提示"
 
 #: Client/loader/Dialogs.cpp:98 Client/game_sa/CSettingsSA.cpp:859
-msgid "MTA: San Andreas"
-msgstr "MTA: San Andreas"
+msgid "IRMP: San Andreas"
+msgstr "IRMP: San Andreas"
 
 #: Client/loader/Dialogs.cpp:99
 msgid "Warning: Could not detect anti-virus product"
